--- a/less/index.less
+++ b/less/index.less
@@ -40,7 +40,6 @@ body {
     width: 100%;
 
     header {
-        // background-color:red;
         margin-top: 4%;
         display: flex;
         align-items: center;
@@ -54,7 +53,6 @@ body {
         
 
         nav {
-            // background-color:yellow;
             width: 100%;
 
             display: flex;
@@ -62,8 +60,6 @@ body {
             justify-content: center;
             
             figure {
-                // background-color:firebrick;
-
                 width: 20%;
                
                 img {
@@ -74,7 +70,6 @@ body {
             }
 
             ul {
-            // background-color: aquamarine;
             width: 100%;
 
             display: flex;
@@ -101,16 +96,13 @@ body {
                             font-size: 1.5rem;
                             letter-spacing: 1px;
                         }
-                    }
-                    
+                    }                  
                 }
             }
         }  
     }
 
     .banner {
-        // background-color: blanchedalmond;
-
         margin: 5% 0;
         width: 80%;
         .for-tablet-portait-only();
@@ -122,8 +114,7 @@ body {
         justify-content: space-between;
         
         .bannerText {
-            // background-color: olive;
-
+            
             // display: flex;
             // align-items: flex-start;
             // justify-content: center;
@@ -140,7 +131,6 @@ body {
                 display: flex;
                 align-items: center;
                 color: #000000;
-                // opacity: 1;
             }
 
             .organize {
@@ -162,8 +152,6 @@ body {
             }
 
             figure {
-                // background-color: tomato;
-
                 width: 100%;
                 margin-top: 25%;
 
@@ -177,13 +165,10 @@ body {
                flex: 1;
                
                 h1 {
-                
-                        font-size: 5.8rem;
+                    font-size: 5.8rem;
                 }
                figure {
-                // background-color: tomato;
-
-                    width: 100%;
+                     width: 100%;
                     margin-top: 20%;
 
                     img {
@@ -192,20 +177,12 @@ body {
                     }
                 }         
             }
-
-            // @media (min-width: 320px) and (max-width: 415px) { 
-            //     background-color: red;
-        
-            //     width: 98%;
-            // }
         }
 
         .bannerBackgroundImage {
-            // background-color: indigo;
             width: 50%;
             display: flex;
             align-items: center;
-            // justify-content: center;
             justify-content: flex-end;
 
             img {
@@ -213,39 +190,21 @@ body {
                 height: auto;
 
             }
-            // @media (min-width: 415px) and (max-width: 639px) { 
-            //     display: none; 
-            // }
             @media (min-width: 320px) and (max-width: 639px) { 
                 display: none; 
             }
-            // @media (min-width: 320px) and (max-width: 415px) { 
-            //     background-color: red;
-        
-            //     width: 98%;
-            // }
         }
     }
 }
 
 
 main {
-    // background-color: hotpink;
     width: 80%;
     .for-tablet-portait-only();
     .for-phone-portait-only();
     .for-phone-only();
 
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // flex-direction: column;
-
     .mainArticle1 {
-        // background-color: rosybrown;
-        
-        // width: 100%;
-
         header {
            
             .my-flex-container();
@@ -257,7 +216,7 @@ main {
                 font-size: 4.4rem;
                 // font-size: 44px;
                 line-height: 114%;
-                /* identical to box height, or 50px */
+                /*or 50px */
 
                 display: flex;
                 align-items: center;
@@ -278,7 +237,6 @@ main {
                 text-align: center;
 
                 color: #747E80;
-
             }
 
             @media (min-width: 415px) and (max-width: 639px) {
@@ -297,8 +255,6 @@ main {
         }
 
         div {
-            // background-color: orange;
-
             display: flex;
             align-content: center;
             justify-content: center;
@@ -306,20 +262,12 @@ main {
             width: 100%;
 
             figure {
-                // background-color: forestgreen;
-
                 display: flex;
                 align-content: center;
                 justify-content: stretch;
                 flex-direction: column;
                 max-width: 320px;
-                // padding: 2%;
                 margin: 2% 1%;
-
-                // img {
-                //     width: 100%;
-                //     height: auto;
-                // }
 
                 figcaption {
                      font-weight: bold;
@@ -330,9 +278,7 @@ main {
 
                     .my-flex-container();
 
-
                     letter-spacing: 2px;
-
                     color: #000000;
                     margin: 0 0 2% 0;
                 }
@@ -347,9 +293,6 @@ main {
                     display: flex;
                     align-items: center;
                     text-align: center;
-
-                    // color: #747E80;
-
                     mix-blend-mode: normal;
                     opacity: 0.9;
                 }
@@ -358,16 +301,12 @@ main {
     }
 
     .mainArticle2 {
-      
-        // background-color: crimson;
-
         // background: linear-gradient(0deg, #F4F4F4 3.67%, #DFDEDC 98.35%);
         // mix-blend-mode: normal;
         // opacity: 0.5;
         // width: 100%;
 
-        header {
-           
+        header {        
             .my-flex-container();
             margin: 5% 0 0 0;
 
@@ -381,7 +320,6 @@ main {
                 display: flex;
                 align-items: center;
                 text-align: center;
-
                 color: black;
             }
 
@@ -398,26 +336,20 @@ main {
         }
 
         div {
-            // background-color: greenyellow;
             display: flex;
             align-items: center;
             justify-content: center;
 
             aside {
-                // background-color: rgb(107, 52, 133);
-                
                 .my-flex-container();
 
                 div {
-                    // background-color: rgb(149, 203, 224);
-                    
                     display: flex;
                     align-items: flex-start;
                     justify-content: flex-start;
                     flex-direction: column;
                     
                     margin: 6% 0;
-                    // padding: 2%;
                     max-width: 320px;
                     max-height: 200px;
 
@@ -430,7 +362,6 @@ main {
 
                         display: flex;
                         align-items: center;
-
                         color: #000000;
                     }
 
@@ -443,32 +374,18 @@ main {
 
 
                         color: #747E80;
-
                     }
                 }
             }
 
             figure {
-                //  background-color: green;
-                 
-                 margin: 5%;
+                margin: 5%;
 
                 img {
                     width: 100%;
                     height: auto;
                 }
-            
-                // @media (min-width: 415px) and (max-width: 639px) {
-                //     // aside {
-                //     //     flex: 1;
-                //     // }
-                //     margin: 1%;
-                //     img {
-                //         display: none;
-                //     }
-                // } 
             }
-           
         }
 
         @media (min-width: 320px) and (max-width: 414px) {
@@ -483,37 +400,23 @@ main {
                 }
                 
             }
-            // margin: 1%;
+            
             figure {
                 display: none;
-            }
-            
-        }
-
-       
+            }          
+        }     
     }
 }
 
 
-.contactUs {
-    // background-color: darkred;
-    
+.contactUs {   
     .my-flex-container();
 
     width: 80%;
     .for-tablet-portait-only();
     .for-phone-portait-only();
     .for-phone-only();
-    // @media (min-width: 415px) and (max-width: 539px) {
-    //     figure {
-    //         // flex-direction: column;
-    //         flex-wrap: wrap;
-    //     }
-    //     h2 {
-    //         font-size: 1rem;
-    //     }
-    // }
-
+   
     p {
         font-weight: 500;
         // font-size: 87.5%;
@@ -530,13 +433,10 @@ main {
         color: #747E80;
         width: 50%;
         text-align: center;
-        // background-color: green;
     }
 
 
     figure {
-        // background-color: sandybrown;
-        
         display: flex;
         align-items: center;
         justify-content: space-evenly;
@@ -544,9 +444,7 @@ main {
 
         flex-wrap: wrap;       
         
-        
         img {
-            // background-color: aqua
             opacity: 0.25;
             margin: 0 2%;
         }
@@ -576,7 +474,6 @@ main {
     }
 
     .usersInfo {
-        // background-color: green;
         display: flex;
         align-items: center;
         justify-content: space-around;
@@ -586,7 +483,6 @@ main {
 
 
         input {
-            // background: #F3F3F3;
             max-width: 180px;
             // height: 50px;
             padding: 2%;
@@ -639,14 +535,6 @@ main {
         }
     }
     @media (min-width: 415px) and (max-width: 639px) {
-        // figure {
-            // flex-direction: column;
-            // flex-wrap: wrap;
-            // // width: 80%;
-            // img{
-            //     margin: 0 2%;
-            // }
-        // }
         h2 {
             font-size: 4rem;
         }
@@ -655,14 +543,6 @@ main {
         }
     }
     @media (min-width: 320px) and (max-width: 414px) {
-        // figure {
-            // flex-direction: column;
-            // flex-wrap: wrap;
-            // // width: 80%;
-            // img{
-            //     margin: 0 2%;
-            // }
-        // }
         h2 {
             font-size: 3rem;
         }
@@ -677,129 +557,96 @@ footer {
     align-items: center;
     justify-content: center;
     background: rgba(0, 0, 0, 0.9);
-.footer {
-    // background-color: violet;
-    
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
 
-    width: 80%;
-    padding: 5% 0;
-    .for-tablet-portait-only();
-    .for-phone-portait-only();
-    .for-phone-only();
+    .footer {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
 
-    
-    
-    div{
-        flex: 1;
-
-        img {
-            width: 25%;
-            height: auto;
-        }
+        width: 80%;
+        padding: 5% 0;
+        .for-tablet-portait-only();
+        .for-phone-portait-only();
+        .for-phone-only();        
         
-        p{
-            font-family: Playfair Display;
-            // font-style: normal;
-            font-weight: normal;
-            font-size: 1.4rem;
-            line-height: 26px;
-            /* or 162% */
+        div{
+            flex: 1;
 
+            img {
+                width: 25%;
+                height: auto;
+            }
+            
+            p{
+                font-family: Playfair Display;
+                // font-style: normal;
+                font-weight: normal;
+                font-size: 1.4rem;
+                line-height: 26px;
+                /* or 162% */
+
+                display: flex;
+                align-items: center;
+
+                color: #FFFFFF;
+
+                mix-blend-mode: normal;
+                opacity: 0.8;
+            }
+
+            .boldP {
+                font-weight: bold;
+            }
+
+        }
+        .socialMedia {
             display: flex;
             align-items: center;
-
-            color: #FFFFFF;
-
-            mix-blend-mode: normal;
-            opacity: 0.8;
-        }
-
-        .boldP {
-            font-weight: bold;
-        }
-
-    }
-    .socialMedia {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        
-        img {
-            background-color: #000000;
-            width: 7%;
-            // height: 5%;
-            margin-right: 10%;
-        }
-        
-        .fb, .tbl {
-                background-color: orange;
-                width: 4%;
-            } 
-
-            @media (min-width: 415px) and (max-width: 639px) {
-                img {
-                    // background-color: #000000;
-                    width: 17%;
-                    // height: 5%;
-                    margin-right: 5%;
-                }
-                
-                .fb, .tbl {
-                        background-color: orange;
-                        width: 10%;
-                    } 
-            }
-    }
-
-    @media (min-width: 320px) and (max-width: 639px) {
-        flex-direction: column;
-        // img {
-        //     // background-color: #000000;
-        //     width: 17%;
-        //     // height: 5%;
-        //     margin-right: 5%;
-        // }
-    //    align-items: center;
-    //    justify-content: center;
-        
-        .socialMedia {
+            justify-content: flex-start;
+            
             img {
-                // background-color: #000000;
-                width: 17%;
+                background-color: #000000;
+                width: 7%;
                 // height: 5%;
-                margin-right: 5%;
+                margin-right: 10%;
             }
             
             .fb, .tbl {
                     background-color: orange;
+                    width: 4%;
+                } 
+
+                @media (min-width: 415px) and (max-width: 639px) {
+                    img {
+                        width: 17%;
+                        margin-right: 5%;
+                    }
+                    
+                    .fb, .tbl {
+                            background-color: orange;
+                            width: 10%;
+                        } 
+                }
+        }
+
+        @media (min-width: 320px) and (max-width: 639px) {
+            flex-direction: column;
+            
+            .socialMedia {
+                img {
+                    width: 17%;
+                    margin-right: 5%;
+                }
+                
+                .fb, .tbl {
+                    background-color: orange;
                     width: 10%;
                 } 
-        }
+            }
+        }        
     }
-    
 }
 
-}
-
-
-// @backgroundColor: purple;
-
-// .for-phone-only() {
-//     @media (max-width: 599px) { background-color: purple }
-//   }
-//   .for-phone-only() {
-//     @media (max-width: 599px) { background-color: red; }
-//   }
-//   .for-tablet-portrait-up() {
-//     // @media (min-width: 600px) { background-color: green; }
-//     @media (max-width: 600px) { background-color: green; }
-//   }
-//   .for-tablet-portait-only() {
-//     @media (min-width: 600px) and (max-width: 899px) { background-color: teal;}
-    
 
 .for-phone-only() {
     @media (min-width: 320px) and (max-width: 415px) { 
@@ -820,20 +667,3 @@ footer {
     }
     
   }
-//   .for-tablet-landscape-up() {
-//     @media (min-width: 900px) { background-color: rgb(42, 53, 23); }
-//   }
-//   .for-tablet-landscape-only() {
-//     @media (min-width: 900px) and (max-width: 1199px) { background-color: tomato; }
-//   }
-//   .for-desktop-up() {
-//     @media (min-width: 1200px) { background-color: rgb(221, 194, 221); }
-//   }
-//   .for-desktop-only() {
-//     @media (min-width: 1200px) and (max-width: 1799px) {  background-color: @backgroundColor;}
-//   }
-//   .for-big-desktop-up() {
-//     @media (min-width: 1800px)  { background-color: @backgroundColor; }
-//   }
-
-
