--- a/less/index.less
+++ b/less/index.less
@@ -298,6 +298,17 @@ main {
                 }
             }
         }
+
+        .horizontalScroll {
+            display: flex;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+
+            .card {
+                flex: 0 0 auto;
+            }
+        }
+
     }
 
     .mainArticle2 {
