add vertical scroll bar for mainArticle2

--- a/less/index.less
+++ b/less/index.less
@@ -388,6 +388,15 @@ main {
                     }
                 }
             }
+            .horizontalScroll2 {
+                display: flex;
+                flex-wrap: nowrap;
+                overflow-x: auto;
+    
+                .card2 {
+                    flex: 0 0 auto;
+                }
+            }
 
             figure {
                 margin: 5%;
