--- a/less/homePage.less
+++ b/less/homePage.less
@@ -7,15 +7,7 @@ body {
 }
 
 
-.wrapper {
-    
-    .my-flex-container();
 
-    max-width: 1400px;
-    width: 100%;
-
-    // background-color: aqua;
-}
 
 .section1 {
     // background-color: blue;
@@ -28,69 +20,6 @@ body {
     
 
     width: 100%;
-
-    header {
-        margin-top: 4%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        
-        width: 80%;
-        height: 10%;
-        .for-tablet-portait-only();
-        .for-phone-portait-only();
-        .for-phone-only();
-        
-
-        nav {
-            width: 100%;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            
-            figure {
-                width: 20%;
-               
-                img {
-                    background-color: #000000;
-                    width: 25%;
-                    height: auto;
-                }
-            }
-
-            ul {
-            width: 100%;
-
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-
-                li {
-                    margin: 0 2%;
-                    
-                    a {
-                        text-decoration: none;
-                        
-                        font-weight: 600;
-                        font-size: 1.8rem;
-                        line-height: 14px;
-
-                        display: flex;
-                        align-items: center;
-                        letter-spacing: 2px;
-
-                        color: black;
-
-                        @media (min-width: 320px) and (max-width: 639px) {
-                            font-size: 1.5rem;
-                            letter-spacing: 1px;
-                        }
-                    }                  
-                }
-            }
-        }  
-    }
 
     .banner {
         margin: 5% 0;
@@ -124,7 +53,8 @@ body {
             }
 
             .organize {
-                color: rgb(255, 230, 0);
+                // color: rgb(255, 230, 0);
+                color: rgb(255,255,0);
             }
 
             h3 {
@@ -305,361 +235,4 @@ main {
         }
 
     }
-
-    .mainArticle2 {
-        // background: linear-gradient(0deg, #F4F4F4 3.67%, #DFDEDC 98.35%);
-        // mix-blend-mode: normal;
-        // opacity: 0.5;
-        // width: 100%;
-
-        header {        
-            .my-flex-container();
-            margin: 5% 0 0 0;
-
-            h2 {
-                font-weight: 800;
-                font-size: 4.4rem;
-                // font-size: 44px;
-                line-height: 114%;
-                /* identical to box height, or 50px*/
-
-                display: flex;
-                align-items: center;
-                text-align: center;
-                color: black;
-            }
-
-            @media (min-width: 415px) and (max-width: 639px) { 
-                h2 {
-                    font-size: 3.5rem;
-                }
-            }
-            @media (min-width: 320px) and (max-width: 414px) {
-                h2 {
-                    font-size: 2.5rem;
-                }
-            }
-        }
-
-        div {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            aside {
-                .my-flex-container();
-
-                div {
-                    display: flex;
-                    align-items: flex-start;
-                    justify-content: flex-start;
-                    flex-direction: column;
-                    
-                    margin: 6% 0;
-                    max-width: 320px;
-                    // max-height: 200px;
-
-                    h3 {
-                        font-weight: bold;
-                        font-size: 2.2rem;
-                        // font-size: 22px;
-                        line-height: 127%;
-                        /* identical to box height, or 28px */
-
-                        display: flex;
-                        align-items: center;
-                        color: #000000;
-                    }
-
-                    p {
-                        font-weight: 500;
-                        font-size: 1.8rem;
-                        // font-size: 18px;
-                        line-height: 156%;
-                        /* or  28px*/
-
-
-                        color: #747E80;
-                    }
-                }
-            }
-           
-            figure {
-                margin: 5%;
-
-                img {
-                    width: 100%;
-                    height: auto;
-                }
-            }
-        }
-
-        @media (min-width: 320px) and (max-width: 414px) {
-            div {
-                flex-direction: column;
-                aside {
-                    div {
-                        p {
-                            font-size: 1.5rem;
-                        }
-                    }
-                }
-                
-            }
-            
-            figure {
-                display: none;
-            }          
-        }   
-        
-        .horizontalScroll2 {
-            display: flex;
-            flex-wrap: nowrap;
-            overflow-x: auto;
-
-            .card2 {
-                flex: 0 0 auto;
-            }
-        }
-    }
 }
-
-
-.contactUs {   
-    .my-flex-container();
-
-    width: 80%;
-    .for-tablet-portait-only();
-    .for-phone-portait-only();
-    .for-phone-only();
-   
-    p {
-        font-weight: 500;
-        // font-size: 87.5%;
-        font-size: 1.4rem;
-        line-height: 16px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        letter-spacing: 1.75px;
-
-        margin: 5% 0;
-
-
-        color: #747E80;
-        width: 50%;
-        text-align: center;
-    }
-
-
-    figure {
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        width: 100%;
-
-        flex-wrap: wrap;       
-        
-        img {
-            opacity: 0.25;
-            margin: 0 2%;
-        }
-    }
-
-    hr {
-        width: 100%;
-        margin: 7% 0;
-        border: 1px solid #c2c2c2;
-    }
-
-    h2 {
-        font-weight: 900;
-        font-size: 4.4rem;
-        // font-size: 44px;
-        line-height: 114%;
-        /* identical to box height, or 50px */
-
-        margin-bottom: -3%;
-
-        display: flex;
-        align-items: center;
-        text-align: center;
-        letter-spacing: -0.244444px;
-
-        color: #2F2F2F;
-    }
-
-    .usersInfo {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-
-        width: 60%;
-        margin-bottom: 3%;
-
-
-        input {
-            max-width: 180px;
-            // height: 50px;
-            padding: 2%;
-            border-radius: 40px;
-        }
-
-        ::placeholder {
-            width:  138px;
-            font-weight: 500;
-            font-size: 1.4rem;
-            line-height: 16px;
-            display: flex;
-            align-items: flex-end;
-
-            color: #303234;
-
-            mix-blend-mode: normal;
-            opacity: 0.7;
-        }
-
-        button {
-            background: #FFEB38;
-            border-radius: 40px;
-
-            max-width: 210px;
-            padding: 2%;
-
-            box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.198681);
-
-            font-weight: bold;
-            font-size: 1.4rem;
-            line-height: 16px;
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            text-align: center;
-            letter-spacing: 1.75px;
-
-            color: #000000;
-        }
-
-        @media (min-width: 320px) and (max-width: 639px) {
-            flex-direction: column;
-            input {
-                margin: 2% 0;
-            }
-            button {
-                margin: 2% 0;
-            }
-        }
-    }
-    @media (min-width: 415px) and (max-width: 639px) {
-        h2 {
-            font-size: 4rem;
-        }
-        p {
-            width: 90%;
-        }
-    }
-    @media (min-width: 320px) and (max-width: 414px) {
-        h2 {
-            font-size: 3rem;
-        }
-        p {
-            width: 90%;
-        }
-    }
-}
-
-footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, 0.9);
-
-    .footer {
-        display: flex;
-        align-items: flex-start;
-        justify-content: center;
-
-        width: 80%;
-        padding: 5% 0;
-        .for-tablet-portait-only();
-        .for-phone-portait-only();
-        .for-phone-only();        
-        
-        div{
-            flex: 1;
-
-            img {
-                width: 25%;
-                height: auto;
-            }
-            
-            p{
-                font-family: Playfair Display;
-                // font-style: normal;
-                font-weight: normal;
-                font-size: 1.4rem;
-                line-height: 26px;
-                /* or 162% */
-
-                display: flex;
-                align-items: center;
-
-                color: #FFFFFF;
-
-                mix-blend-mode: normal;
-                opacity: 0.8;
-            }
-
-            .boldP {
-                font-weight: bold;
-            }
-
-        }
-        .socialMedia {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            
-            img {
-                background-color: #000000;
-                width: 7%;
-                // height: 5%;
-                margin-right: 10%;
-            }
-            
-            .fb, .tbl {
-                    background-color: orange;
-                    width: 4%;
-                } 
-
-                @media (min-width: 415px) and (max-width: 639px) {
-                    img {
-                        width: 17%;
-                        margin-right: 5%;
-                    }
-                    
-                    .fb, .tbl {
-                            background-color: orange;
-                            width: 10%;
-                        } 
-                }
-        }
-
-        @media (min-width: 320px) and (max-width: 639px) {
-            flex-direction: column;
-            
-            .socialMedia {
-                img {
-                    width: 17%;
-                    margin-right: 5%;
-                }
-                
-                .fb, .tbl {
-                    background-color: orange;
-                    width: 10%;
-                } 
-            }
-        }        
-    }
-}
-
