--- a/less/index.less
+++ b/less/index.less
@@ -2,5 +2,11 @@
 
 @import "reset.less";
 @import "mixins.less";
+
+@import "wrapper.less";
+@import "nav.less";
 @import "homePage.less";
 @import "mediaQuaries.less";
+@import "features.less";
+@import "contactUs";
+@import "footer";
